force-app/main/default/objects/CRM_DoNotCallEmail_Settings__c/CRM_DoNotCallEmail_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the messages for 
-No Sales Call/No Sales Email
-Pre-MQL Leads banner</description>
    <label>CRM : DoNotCallEmail, Pre-MQL : Settings</label>
</CustomObject>