force-app/main/default/objects/CRM_DoNotCallEmail_Settings__c/fields/Contact_MSG__c.field-meta.xml
<CustomField>
    <fullName>Contact_MSG__c</fullName>
    <description>Message on the Contact detail record when any of the field No Sales Email or No Sales Contact is checked.</description>
    <label>Contact MSG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>