force-app/main/default/objects/CRM_DoNotCallEmail_Settings__c/fields/ECL_SQL_Conversion_Alert__c.field-meta.xml
<CustomField>
    <fullName>ECL_SQL_Conversion_Alert__c</fullName>
    <description>ECL Alert: Lead status must be Sales Qualified to click ‘Convert’ and complete conversion process</description>
    <inlineHelpText>ECL Alert: Lead status must be Sales Qualified to click ‘Convert’ and complete conversion process</inlineHelpText>
    <label>ECL : SQL : Conversion Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>