force-app/main/default/objects/CRM_DoNotCallEmail_Settings__c/fields/Lead_MSG__c.field-meta.xml
<CustomField>
    <fullName>Lead_MSG__c</fullName>
    <description>Message shown on the Lead detail page when one of the field No Sales Call or No Sales Email is checked</description>
    <label>Lead MSG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>