force-app/main/default/objects/CRM_DoNotCallEmail_Settings__c/fields/Pre_MQL_Lead_View_Msg__c.field-meta.xml
<CustomField>
    <fullName>Pre_MQL_Lead_View_Msg__c</fullName>
    <description>Message banner shown in Pre-MQL Lead detail pages</description>
    <inlineHelpText>Message banner shown in Pre-MQL Lead detail pages</inlineHelpText>
    <label>Pre-MQL Lead View Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>